--- a/BirdFrontEnd/src/app/breeder/breeder-detail/breeder-detail.component.html
+++ b/BirdFrontEnd/src/app/breeder/breeder-detail/breeder-detail.component.html
@@ -4,7 +4,7 @@
             <h1>Breeder management</h1>
         </div>
         <div class="page-body">
-            <form [formGroup]="breederForm" *ngIf="breederForm">
+            <form [formGroup]="breederForm" *ngIf="breederForm && !(loading$ | async)">
                 <h2>Kweker bewerken</h2>
         
                 <div class="form-group">
@@ -32,6 +32,9 @@
                     <button pButton type="submit" (click)="onSubmit()" [disabled]="!breederForm.valid" label="Opslaan"></button>
                 </div>
             </form>
+            <div class="p-mt-4">
+                <c-loader *ngIf="loading$ | async"></c-loader>
+            </div>
         </div>
     </div>
 </div>
