Create and Update BirdEgg

--- a/BirdFrontEnd/src/app/couple/couple.component.html
+++ b/BirdFrontEnd/src/app/couple/couple.component.html
@@ -51,7 +51,7 @@
                     <p>{{couple.name}}</p>
                 </td>
                 <td>
-                    <p>{{couple.startedAt}}</p>
+                    <p>{{couple.startedAt | date: 'dd/MM/yyyy' }}</p>
                 </td>
                 <td>
                     <p>{{couple.fatherRingNumber}}</p>
