--- a/BirdFrontEnd/src/app/bird/bird.component.html
+++ b/BirdFrontEnd/src/app/bird/bird.component.html
@@ -63,7 +63,7 @@
                 </th>
                 <th>
                     <div class="p-d-flex p-jc-between p-ai-center">
-                        Edit
+                        Bewerk
                     </div>
                 </th>
                 <!-- <th>
@@ -100,7 +100,7 @@
                     <p>{{ bird.cageNumber }}</p>
                 </td>
                 <td>
-                    <button pButton pRipple type="button" label="Bewerk" class="p-button-raised" style="margin-left: 10px;" routerLink="/birds/detail/{{bird.id}}"></button>
+                    <button pButton pRipple type="button" label="Detail" class="p-button-raised" style="margin-left: 10px;" routerLink="/birds/detail/{{bird.id}}"></button>
                 </td>
                 <!-- <td>
                     <button pButton pRipple type="button" label="Verwijder" class="p-button-danger" style="margin-left: 5px;" (click)="DeleteBird(bird.id)"></button>
