Update cagenumber to string

--- a/BirdFrontEnd/src/app/bird/bird-create/bird-create.component.html
+++ b/BirdFrontEnd/src/app/bird/bird-create/bird-create.component.html
@@ -46,7 +46,7 @@
     
                     <div class="form-group">
                         <label for="cageNumber">Kotnummer</label>
-                        <p-inputNumber type="number" [style]="{'width':'100%'}" class="form-control" formControlName="cageNumber" id="cageNumber" [showButtons]="true" placeholder="1"></p-inputNumber>
+                        <input pInputText type="text" class="form-control" formControlName="cageNumber" id="cageNumber" placeholder="A1">
                     </div>
                 </div>
 
