--- a/BirdFrontEnd/src/app/bird/bird.component.html
+++ b/BirdFrontEnd/src/app/bird/bird.component.html
@@ -6,15 +6,7 @@
             <div class="p-d-flex">
                 <span class="p-input-icon-left" style="margin-left: 20px;">
                     <i class="pi pi-search"></i>
-                    <input type="text" pInputText placeholder="Zoek Kweker" />
-                </span>   
-                <span class="p-input-icon-left" style="margin-left: 20px;">
-                    <i class="pi pi-search"></i>
-                    <input type="text" pInputText placeholder="Zoek Ringnummer" />
-                </span> 
-                <span class="p-input-icon-left" style="margin-left: 20px;">
-                    <i class="pi pi-search"></i>
-                    <input type="text" pInputText placeholder="Zoek Kotnummer" />
+                    <input type="text" pInputText placeholder="Zoek Kweker, Ringnummer of Kot" (keyup)="onSearch($event.target.value)" />
                 </span>
             </div>
             
