--- a/BirdFrontEnd/src/app/breeder/breeder.component.html
+++ b/BirdFrontEnd/src/app/breeder/breeder.component.html
@@ -6,7 +6,7 @@
             <div class="p-d-flex">
                 <span class="p-input-icon-left" style="margin-left: 20px;">
                     <i class="pi pi-search"></i>
-                    <input type="text" pInputText placeholder="Zoek Kweker" />
+                    <input type="text" pInputText placeholder="Zoek Kweker" (keyup)="onSearch($event.target.value)" />
                 </span>
             </div>
             
