--- a/BirdFrontEnd/src/app/couple/couple-detail/couple-detail.component.html
+++ b/BirdFrontEnd/src/app/couple/couple-detail/couple-detail.component.html
@@ -53,11 +53,7 @@
                 [rows]="10" [showCurrentPageReport]="true" styleClass="p-datatable-customers p-datatable-gridlines"
                 [paginator]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries">
                 <ng-template pTemplate="caption">
-                    <div class="p-d-flex p-jc-between">
-                        <span class="p-input-icon-left" style="margin-left: 20px;">
-                            <i class="pi pi-search"></i>
-                            <input type="text" pInputText placeholder="Zoek ei" />
-                        </span>
+                    <div class="p-d-flex p-jc-end">
                         <button pButton pRipple type="button" label="Ei toevoegen" icon="pi pi-plus" class="detail-button" style="margin-left: 5px;" (click)="openModal(couple.id)"></button>
                     </div>
                 </ng-template>
