--- a/BirdFrontEnd/src/app/couple/couple.component.html
+++ b/BirdFrontEnd/src/app/couple/couple.component.html
@@ -6,7 +6,7 @@
             <div class="p-d-flex">
                 <span class="p-input-icon-left" style="margin-left: 20px;">
                     <i class="pi pi-search"></i>
-                    <input type="text" pInputText placeholder="Zoek Koppel" />
+                    <input type="text" pInputText placeholder="Zoek Koppel" (keyup)="onSearch($event.target.value)"/>
                 </span>
             </div>
             
