--- a/BirdFrontEnd/src/app/owner/owner.component.html
+++ b/BirdFrontEnd/src/app/owner/owner.component.html
@@ -6,7 +6,7 @@
             <div class="p-d-flex">
                 <span class="p-input-icon-left" style="margin-left: 20px;">
                     <i class="pi pi-search"></i>
-                    <input type="text" pInputText placeholder="Zoek Eigenaar" />
+                    <input type="text" pInputText placeholder="Zoek Eigenaar" (keyup)="onSearch($event.target.value)"/>
                 </span>
             </div>
         </ng-template>
