--- a/BirdFrontEnd/src/app/app.component.html
+++ b/BirdFrontEnd/src/app/app.component.html
@@ -7,7 +7,7 @@
     </div>
     
     <div class="p-toolbar-group-right">
-        <p-button label="Uitloggen" icon="pi pi-sign-out" [routerLink]="['/signout']"></p-button>
+        <!-- <p-button label="Uitloggen" icon="pi pi-sign-out" [routerLink]="['/signout']"></p-button> -->
     </div>
 </p-toolbar>
 
