--- a/BirdFrontEnd/src/app/bird/bird.component.html
+++ b/BirdFrontEnd/src/app/bird/bird.component.html
@@ -6,7 +6,7 @@
             <div class="p-d-flex">
                 <span class="p-input-icon-left" style="margin-left: 20px;">
                     <i class="pi pi-search"></i>
-                    <input type="text" pInputText placeholder="Zoek Kweker, Ringnummer of Kot" (keyup)="onSearch($event.target.value)" />
+                    <input type="text" pInputText placeholder="Zoek Kweker, Eigenaar, Ringnummer of Kot" (keyup)="onSearch($event.target.value)" [style]="{'width':'400px'}"/>
                 </span>
             </div>
             
