--- a/BirdFrontEnd/src/app/couple/birdegg-create-modal/birdegg-create-modal.html
+++ b/BirdFrontEnd/src/app/couple/birdegg-create-modal/birdegg-create-modal.html
@@ -2,17 +2,17 @@
     <form [formGroup]="birdEggForm" *ngIf="birdEggForm && !(loading$ | async)">
         <div class="form-group">
             <label for="name">Datum gelegd</label>
-            <p-calendar formControlName="layedOn" [style]="{'width':'100%'}" dateFormat="dd-mm-yy" inputId="dateformat"></p-calendar>
+            <p-calendar formControlName="layedOn" dateFormat="dd-mm-yy" inputId="dateformat"></p-calendar>
         </div>
         
         <div class="form-group">
             <label for="name">Datum uitgekomen</label>
-            <p-calendar formControlName="cameOutOn" [style]="{'width':'100%'}" dateFormat="dd-mm-yy" inputId="dateformat"></p-calendar>
+            <p-calendar formControlName="cameOutOn" dateFormat="dd-mm-yy" inputId="dateformat"></p-calendar>
         </div>
         
         <div class="form-group">
             <label for="name">Datum uitgevlogen</label>
-            <p-calendar formControlName="flyOutOn" [style]="{'width':'100%'}" dateFormat="dd-mm-yy" inputId="dateformat"></p-calendar>
+            <p-calendar formControlName="flyOutOn" dateFormat="dd-mm-yy" inputId="dateformat"></p-calendar>
         </div>
         
         <div class="form-group">
