--- a/BirdFrontEnd/src/app/bird/bird.component.html
+++ b/BirdFrontEnd/src/app/bird/bird.component.html
@@ -77,7 +77,7 @@
                     <p>{{ bird.owner.firstName }} {{ bird.owner.lastName }}</p>
                 </td>
                 <td>
-                    <p>{{ bird.gender }}</p>
+                    <p>{{ bird.gender === 'FEMALE' ? 'POP' : 'MAN' }}</p>
                 </td>
                 <td>
                     <p>{{ bird.birdType }}</p>
