--- a/BirdFrontEnd/src/app/bird/bird-detail/bird-detail.component.html
+++ b/BirdFrontEnd/src/app/bird/bird-detail/bird-detail.component.html
@@ -6,7 +6,7 @@
         <div class="page-body">
             <div class="p-d-flex p-jc-between p-ai-center">
                 <h2>Algemene informatie</h2>
-                <button *ngIf="bird.parents" pButton pRipple type="button" icon="pi pi-arrow-right" iconPos="right" label="Ga naar stamboom" class="p-button-raised" (click)="goToBirthTree()"></button>
+                <button *ngIf="bird && bird.parents !== undefined" pButton pRipple type="button" icon="pi pi-arrow-right" iconPos="right" label="Ga naar stamboom" class="p-button-raised" (click)="goToBirthTree()"></button>
             </div>
             <form *ngIf="birdForm && !(loading$ | async)" [formGroup]="birdForm">
                 <div class="form-group-wrapper">
@@ -147,6 +147,65 @@
                 <ng-template pTemplate="emptymessage">
                     <tr>
                         <td colspan="7">Geen koppels gevonden.</td>
+                    </tr>
+                </ng-template>
+            </p-table>
+            <div class="p-mt-4">
+                <c-loader *ngIf="loading$ | async"></c-loader>
+            </div>
+
+            <!-- Shows -->
+            <div class="p-d-flex p-jc-between p-ai-center">
+                <h2 class="p-mt-5">Tentoonstellingen</h2>
+                <button pButton pRipple type="button" icon="pi pi-plus" iconPos="left" label="Tentoonstelling" class="p-button-raised" (click)="openCreateBirdShowModel(bird.id)"></button>
+            </div>
+            <div class="shows">
+                <p-table #dt1 [value]="bird?.birdShows" dataKey="id"
+                [rows]="10" [showCurrentPageReport]="true" styleClass="p-datatable-customers p-datatable-gridlines"
+                [paginator]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries">
+                <ng-template pTemplate="header">
+                    <tr>
+                        <th>
+                            <div class="p-d-flex p-jc-between p-ai-center">
+                                Locatie
+                            </div>
+                        </th>
+                        <th>
+                            <div class="p-d-flex p-jc-between p-ai-center">
+                                Punten
+                            </div>
+                        </th>
+                        <th>
+                            <div class="p-d-flex p-jc-between p-ai-center">
+                                Plaats
+                            </div>
+                        </th>                        
+                        <th>
+                            <div class="p-d-flex p-jc-between p-ai-center">
+                                Opties
+                            </div>
+                        </th>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-show>
+                    <tr>
+                        <td>
+                            <p>{{ show.location }}</p>
+                        </td>
+                        <td>
+                            <p>{{ show.points }}</p>
+                        </td>
+                        <td>
+                            <p>{{ show.rank }}</p>
+                        </td>                      
+                        <td>
+                            <button pButton pRipple type="button" label="" icon="pi pi-pencil" class="detail-button" style="margin-left: 5px;" (click)="openUpdateBirdShowModel(show.birdId, show.id)"></button>
+                        </td>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="emptymessage">
+                    <tr>
+                        <td colspan="7">Geen tentoonstellingen gevonden.</td>
                     </tr>
                 </ng-template>
             </p-table>
