Update bird list Date

--- a/BirdFrontEnd/src/app/bird/bird.component.html
+++ b/BirdFrontEnd/src/app/bird/bird.component.html
@@ -86,7 +86,7 @@
                     <p>{{ bird.color }}</p>
                 </td>
                 <td>
-                    <p>{{ bird.birthDate | date: 'YYYY'}}</p>
+                    <p>{{ bird.birthDate | date: 'MM/YYYY'}}</p>
                 </td>
                 <td>
                     <p>{{ bird.cageNumber }}</p>
