--- a/BirdFrontEnd/src/app/bird/bird.component.html
+++ b/BirdFrontEnd/src/app/bird/bird.component.html
@@ -1,15 +1,14 @@
 <div class="c-bird-overview">
-    <p-table #dt1 [value]="birds" dataKey="id" *ngIf="!(loading$ | async)"
-        [rows]="25" [showCurrentPageReport]="true" styleClass="p-datatable-customers p-datatable-gridlines"
-        [paginator]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries">
+    <p-table #dt1 [value]="birds" dataKey="id" *ngIf="!(loading$ | async) && birds"
+        styleClass="p-datatable-customers p-datatable-gridlines">
         <ng-template pTemplate="caption">
             <div class="p-d-flex">
                 <span class="p-input-icon-left" style="margin-left: 20px;">
                     <i class="pi pi-search"></i>
-                    <input type="text" pInputText placeholder="Zoek Kweker, Eigenaar, Ringnummer of Kot" (keyup)="onSearch($event.target.value)" [style]="{'width':'400px'}"/>
+                    <input type="text" pInputText placeholder="Zoek Kweker, Eigenaar, Ringnummer of Kot" [(ngModel)]="search" (keyup)="onSearch($event.target.value)" [style]="{'width':'400px'}"/>
                 </span>
             </div>
-            
+
         </ng-template>
         <ng-template pTemplate="header">
             <tr>
@@ -17,15 +16,15 @@
                     <div class="p-d-flex p-jc-between p-ai-center">
                         Ringnummer
                     </div>
-                </th>                
+                </th>
                 <th>
                     <div class="p-d-flex p-jc-between p-ai-center">
-                        Kweker 
+                        Kweker
                     </div>
                 </th>
                 <th>
                     <div class="p-d-flex p-jc-between p-ai-center">
-                        Eigenaar 
+                        Eigenaar
                     </div>
                 </th>
                 <th>
@@ -40,7 +39,7 @@
                 </th>
                 <th>
                     <div class="p-d-flex p-jc-between p-ai-center">
-                        Kleur 
+                        Kleur
                     </div>
                 </th>
                 <th>
@@ -98,6 +97,11 @@
                     <button pButton pRipple type="button" label="Verwijder" class="p-button-danger" style="margin-left: 5px;" (click)="DeleteBird(bird.id)"></button>
                 </td> -->
             </tr>
+        </ng-template>
+        <ng-template pTemplate="footer">
+            <div [style]="{'width':'99vw'}">
+                <p-paginator class="p-d-flex p-jc-center" [rows]="pagination.pageSize" [first]="first" [totalRecords]="pagination.totalAmount" currentPageReportTemplate="{first} van de {totalRecords} resultaten" showCurrentPageReport="true" [rowsPerPageOptions]="[5,10,20,30]" (onPageChange)="paginate($event)"></p-paginator>
+            </div>
         </ng-template>
         <ng-template pTemplate="emptymessage">
             <tr>
