--- a/BirdFrontEnd/src/app/owner/owner.component.html
+++ b/BirdFrontEnd/src/app/owner/owner.component.html
@@ -1,12 +1,11 @@
 <div class="c-owner-overview">
-    <p-table #dt1 [value]="owners" dataKey="id" *ngIf="!(loading$ | async)"
-        [rows]="25" [showCurrentPageReport]="true" styleClass="p-datatable-customers p-datatable-gridlines"
-        [paginator]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries">
+    <p-table #dt1 [value]="owners" dataKey="id" *ngIf="!(loading$ | async) && owners"
+        styleClass="p-datatable-customers p-datatable-gridlines">
         <ng-template pTemplate="caption">
             <div class="p-d-flex">
                 <span class="p-input-icon-left" style="margin-left: 20px;">
                     <i class="pi pi-search"></i>
-                    <input type="text" pInputText placeholder="Zoek Eigenaar" (keyup)="onSearch($event.target.value)"/>
+                    <input type="text" pInputText placeholder="Zoek Eigenaar" [(ngModel)]="search" (keyup)="onSearch($event.target.value)"/>
                 </span>
             </div>
         </ng-template>
@@ -20,19 +19,19 @@
                 </th>
                 <th>
                     <div class="p-d-flex p-jc-between p-ai-center">
-                        Naam 
-                        <!-- <p-columnFilter type="text" field="lastname" display="menu"></p-columnFilter>-->
-                    </div>
-                </th>  
-                <th>
-                    <div class="p-d-flex p-jc-between p-ai-center">
-                        Telefoon 
+                        Naam
                         <!-- <p-columnFilter type="text" field="lastname" display="menu"></p-columnFilter>-->
                     </div>
                 </th>
                 <th>
                     <div class="p-d-flex p-jc-between p-ai-center">
-                        Email 
+                        Telefoon
+                        <!-- <p-columnFilter type="text" field="lastname" display="menu"></p-columnFilter>-->
+                    </div>
+                </th>
+                <th>
+                    <div class="p-d-flex p-jc-between p-ai-center">
+                        Email
                         <!-- <p-columnFilter type="text" field="lastname" display="menu"></p-columnFilter>-->
                     </div>
                 </th>
@@ -40,7 +39,7 @@
                     <div class="p-d-flex p-jc-between p-ai-center">
                         Edit
                     </div>
-                </th> 
+                </th>
                 <!-- <th>
                     <div class="p-d-flex p-jc-between p-ai-center">
                         X
@@ -69,6 +68,11 @@
                     <button pButton pRipple type="button" label="Verwijder" class="p-button-danger" style="margin-left: 5px;" (click)="DeleteOwner(owner.id)"></button>
                 </td> -->
             </tr>
+        </ng-template>
+        <ng-template pTemplate="footer">
+            <div [style]="{'width':'99vw'}">
+                <p-paginator class="p-d-flex p-jc-center" [rows]="pagination.pageSize" [first]="first" [totalRecords]="pagination.totalAmount" currentPageReportTemplate="{first} van de {totalRecords} resultaten" showCurrentPageReport="true" [rowsPerPageOptions]="[5,10,20,30]" (onPageChange)="paginate($event)"></p-paginator>
+            </div>
         </ng-template>
         <ng-template pTemplate="emptymessage">
             <tr>
