--- a/BirdFrontEnd/src/app/couple/couple-detail/couple-detail.component.html
+++ b/BirdFrontEnd/src/app/couple/couple-detail/couple-detail.component.html
@@ -17,12 +17,12 @@
                             <label for="startedAt">Gestart op</label>
                             <input pInputText type="date" class="form-control" formControlName="startedAt" id="startedAt">
                         </div>
-        
+
                         <div class="p-d-flex p-flex-column p-col-3">
                             <label for="cageNumber">Kotnummer</label>
                             <input pInputText type="text" class="form-control" formControlName="cageNumber" id="cageNumber">
-                        </div> 
-                    </div>            
+                        </div>
+                    </div>
                     <div class="p-d-flex p-jc-between couple-parents">
                         <div class="p-d-flex p-flex-column p-col-4">
                             <label for="father">Vader</label>
@@ -32,19 +32,19 @@
                         <div class="p-d-flex p-flex-column p-col-4">
                             <label for="mother">Moeder</label>
                             <input pInputText type="text" class="form-control" formControlName="mother" id="mother">
-                        </div>  
+                        </div>
                     </div>
-    
+
                     <div class="p-d-flex p-flex-column p-col-4">
                         <label for="description">Omschrijving</label>
                         <input pInputTextarea type="text" class="form-control" formControlName="description" id="description">
-                    </div>    
+                    </div>
                 </div>
 
                 <div class="form-footer">
                     <button pButton type="button" class="p-button-outlined" (click)="goBack()" label="Terug"></button>
                     <button pButton type="submit" (click)="onSubmit()" [disabled]="!coupleForm.valid" label="Opslaan"></button>
-                </div>                      
+                </div>
             </form>
 
             <!-- Bird eggs -->
@@ -66,7 +66,7 @@
                         </th>
                         <th>
                             <div class="p-d-flex p-jc-between p-ai-center">
-                                Datum uitgekomen 
+                                Datum uitgekomen
                             </div>
                         </th>
                         <th>
@@ -109,13 +109,16 @@
                         </td>
                         <td>
                             <p>{{egg.flyOutOn | date: 'dd/MM/yyyy' }}</p>
-                        </td>   
+                        </td>
                         <td>
                             <p>{{egg.color }}</p>
-                        </td>  
+                        </td>
                         <td>
-                            <p>{{egg.gender === 'FEMALE' ? 'POP' : 'MAN' }}</p>
-                        </td>                      
+                            <p>{{ egg.gender === 'FEMALE' ? 'POP' :
+                                  egg.gender === 'MALE' ? 'MAN' :
+                                  ''
+                            }}</p>
+                        </td>
                         <td>
                             <button pButton pRipple type="button" label="" icon="pi pi-pencil" class="detail-button" style="margin-left: 5px;" (click)="openUpdateModal(egg.id, couple.id)" [disabled]="egg.birdId"></button>
                         </td>
