Little styling for smaller screens with overflow hidden when text is too big

--- a/BirdFrontEnd/src/app/bird/bird.component.html
+++ b/BirdFrontEnd/src/app/bird/bird.component.html
@@ -96,7 +96,7 @@
         <ng-template pTemplate="body" let-bird>
             <tr [ngClass]="{ 'is-dead': bird.isDead }">
                 <td>
-                    <p>{{ bird.ringNumber }}</p>
+                    <p class="ringnumber">{{ bird.ringNumber }}</p>
                 </td>
                 <td>
                     <p>{{ bird.breeder.firstName }} {{ bird.breeder.lastName }}</p>
